# docker-vuejs-python-nginx

./: .gitignore  Dockerfile  README.rst  docker-compose.yaml  requirements.txt  setup.cfg  test-requirements.txt  tox.ini  wait-for-it.sh
etc/nginx/: sample.docker.template
sample/: api.py  bootstrap.sh
sample-ui/: Dockerfile  bootstrap.sh  package-lock.json  package.json  vue.config.js
sample-ui/public/: index.html
