[metadata]
name = Sample dockerized environment
summary = Sample dockerized environment
description-file =
    README.rst
author = Ivan Kolodyazhny
author-email = e0ne@e0ne.info
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[files]
packages =
    sample

